# stack-updater-app

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-ci.yml
app/: __init__.py  config.py  database.db  db.py  logging_setup.py  main.py  realtime.py
app/api/: routes.py
app/models/: stack.py
app/services/: portainer_client.py  stack_service.py
app/static/: script.js  style.css
app/static/css/: animations.css  badges.css  base.css  buttons.css  forms.css  layout.css  stats.css  table.css  utilities.css  variables.css
app/static/js/: app.js
app/static/js/modules/: accessibility.js  api.js  buttons.js  stats.js  store.js  table.js  theme.js  utils.js
app/tasks/: background.py
app/templates/: add_edit.html  index.html
scripts/: install.ps1  install.sh
tests/: conftest.py  test_api.py  test_models.py
